--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "jsx": "react",
     "outDir": "./lib",
     "rootDir": "./src",
-    "strict": true
+    "strict": true,
+    "declaration": true,
+    "declarationDir": "./lib"
   },
   "include": [
     "src/**/*"
