chore: add new test:coverage npm script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test": "jest --coverage && codecov",
     "build": "tsc",
     "precommit": "jest"
