--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-format",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "A React Component to make formatting money/currency easier",
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
@@ -12,7 +12,8 @@
     "test:coverage": "jest --coverage",
     "test": "jest --coverage && codecov",
     "build": "tsc",
-    "precommit": "jest"
+    "precommit": "jest",
+    "deploy": "npm run test:coverage && npm run build && np"
   },
   "keywords": [
     "react",
@@ -34,10 +35,16 @@
     "enzyme-to-json": "^1.5.1",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
+    "np": "^2.16.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "ts-jest": "^20.0.6",
     "typescript": "^2.3.4"
+  },
+  "homepage": "https://github.com/divyagnan/react-format",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/divyagnan/react-format.git"
   }
 }
