--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "enzyme-to-json": "^1.5.1",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
+    "jest-in-case": "^1.0.1",
     "np": "^2.16.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -46,5 +47,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/divyagnan/react-format.git"
-  }
+  },
+  "dependencies": {}
 }
